<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.FragmentSetting">

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvWelcome"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/btRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Vietnamese, Việt Nam"
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="VND - đ"
                android:id="@+id/tvCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Hệ đo lường mét (km)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Quản lý thiết lập quyền riêng tư"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/legalInformation"
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Thông tin pháp lý"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Chính sách bảo mật"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"/>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/centerSupport"
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Trung tâm trợ giúp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>
        <View
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/btLogout"
            android:layout_margin="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Thoát"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"/>
    </LinearLayout>
</ScrollView>