<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragment.FragmentHome">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logohn"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"/>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_below="@id/logo"
            android:id="@+id/layoutTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:id="@+id/layoutEditText"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Điểm đến"
                        android:layout_marginBottom="2sp"
                        android:textSize="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:editable="false"
                        android:id="@+id/etSearch"
                        android:textSize="@dimen/_16sdp"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center"
                        android:hint="@string/chose"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_26sdp"/>
                </LinearLayout>
                <View
                    android:layout_below="@id/layoutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />
                <View
                    android:layout_below="@id/layoutText"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line" />
                <LinearLayout
                    android:id="@+id/layoutText"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_below="@id/layoutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">
                    <LinearLayout
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:text="Ngày"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:id="@+id/tvDatePicker" />
                    </LinearLayout>

                    <View
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line" />
                    <LinearLayout
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:text="Phòng"
                            android:textSize="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:id="@+id/tvRoom"
                            android:text="2 khách, 1 phòng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/btFind"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/layoutText"
                    android:text="@string/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_below="@id/layoutTop"
            android:id="@+id/layoutNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvNews"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:id="@+id/layoutHistory"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@+id/layoutNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:text="NƠI BẠN XEM GẦN ĐÂY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_30sdp"
                android:id="@+id/rcvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/layoutTop"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/rcvResidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/layoutTop"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"/>
    </RelativeLayout>

</ScrollView>